styles.css
@font-face {
  font-family:"FagHagBlack";
  src: url("assets/FagHagBlack2.otf") format("truetype");
}

@font-face {
  font-family:"Luxembourg";
  src: url("assets/luxembourg.TTF") format("truetype");
}

@font-face {
  font-family:"Yolda";
  src: url("assets/YOLDA___.TTF") format("truetype");
}

@font-face {
  font-family:"Karla";
  src: url("assets/Karla-Regular.ttf") format("truetype");
}

@font-face {
  font-family:"MuktaVaani";
  src: url("assets/MuktaVaani-Regular.ttf") format("truetype");
}

@font-face {
  font-family:"OpenSans";
  src: url("assets/OpenSans-Regular.ttf") format("truetype");
}

@font-face {
  font-family:"Roboto";
  src: url("assets/Roboto-Regular.ttf") format("truetype");
}

@font-face {
  font-family:"UnifrankturMaguntia";
  src: url("assets/UnifrankturMaguntia-Regular.ttf") format("truetype");
}

:root {
	--summer-green: #8eb8a2;
	--bay-leaf: #83b195;
	--waterloo: #8180a0;
	--kimberly: #7f7ca7;
	--tall-poppy: #bb2531;
	--cadillac: #b65066;
	--tana: #d8d9ba;
	--chino: #cecba2;
}

html, body {
	height: 100%;
	margin: 0;
	overflow: hidden;
	font-family: MuktaVaani;
}

a {
    color: black;
    text-decoration: none;
}

.page-wrapper {
	min-height: 100%;
	background-color: white;
	position: relative;
}

.tile {
	background-color: white;
	position: absolute;
    width: 96%;
    height: 96%;
    margin: 2%;
}

.header-text {
	font-family: FagHagBlack;
    font-size: xx-large;
    margin: 23px;
}

.menu-wrapper {
    margin-left: 20px;
    display: flex;
    flex-direction: column;
}

#index-content-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#moth-image {
    width: 20%;
    z-index: 0;
}

#newsletter-form-wrapper {
	z-index: 10;
	background-color: white;
    border: 4px solid #000;
    padding: 7px 40px;
}

#booking-button {
	position: relative;
    padding: 6px 30px;
    background-color: white;
    border: 4px solid #000;
}

#newsletter-submit {
    border: 2px solid;
    font-family: MuktaVaani;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {...}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {...}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {...}

